docs: update README, operations and Telegram setup; CI and .gitignore improvements

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Secrets should not be committed
+.secrets/
 # ------------------------------
 # Python cache and bytecode
 # ------------------------------
