chore: move root launchers to scripts/ and update console_scripts

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ exclude =
 
 [options.entry_points]
 console_scripts =
-    farmease-dashboard = dashboard:main
-    farmease-train = train_models:main
-    farmease-predict = predict_next:main
-    farmease-telegram = telegram_notifier:main
+    farmease-dashboard = scripts.dashboard:main
+    farmease-train = scripts.train_models:main
+    farmease-predict = scripts.predict_next:main
+    farmease-telegram = scripts.telegram_notifier:main
