--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,13 +20,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements-ml.txt ]; then pip install -r requirements-ml.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          python -m pip install -e .
 
       - name: Syntax check
         run: |
-          python -m py_compile dashboard.py train_models.py predict_next.py telegram_notifier.py
-          python -m compileall -q app integrations ml
+          python -m py_compile scripts/dashboard.py scripts/train_models.py scripts/predict_next.py
+          python -m compileall -q app integrations ml scripts
 
       - name: Run unit tests
         run: |
-          python -m unittest discover -s tests -p "test_*.py"
+          python -m pip install pytest
+          pytest -q
