--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,22 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-locked.txt') }}
+
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirements-locked.txt ]; then pip install -r requirements-locked.txt; else if [ -f requirements.txt ]; then pip install -r requirements.txt; fi; fi
           python -m pip install -e .
+
+      - name: Lint and format check
+        run: |
+          python -m pip install black flake8
+          black --check .
+          flake8
 
       - name: Syntax check
         run: |
