--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,24 @@ jobs:
           black --check .
           flake8
 
+  deps:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Verify dependency lock
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pip-tools
+          pip-compile requirements.in --output-file=requirements-locked.txt
+          if [ -n "$(git status --porcelain requirements-locked.txt)" ]; then echo "requirements-locked.txt is out of date"; git --no-pager diff requirements-locked.txt || true; exit 1; fi
+
       - name: Syntax check
         run: |
           python -m py_compile scripts/dashboard.py scripts/train_models.py scripts/predict_next.py
