--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ data/event_timeline.csv
 data/.cloud_sync_state.json
 data/.firestore_sync_state.json
 data/cloud_sync.db
+data/cloud_ingest.jsonl
 
 # Large or local-only assets
 /IOT SPLICE_2e brochure.pdf
@@ -84,6 +85,11 @@ data/cloud_sync.db
 # ------------------------------
 models/*.joblib
 models/training_report.json
+models/health_check_report.json
+
+# Generated operational summaries
+docs/EVENT_EVIDENCE.md
+docs/HEALTH_CHECK.md
 
 # ------------------------------
 # Arduino generated binaries
